changed hangelog the xml format in liquibase.properties

--- a/liquibase.properties
+++ b/liquibase.properties
@@ -1,6 +1,6 @@
 #This file is for CLI use.
 
-changeLogFile: dbchangelogWithPro3.oracle.sql
+changeLogFile: dbchangelogWithPro.xml
 #for Oracle
 url: jdbc:oracle:thin:@localhost:1521:xe
 username: QA
