edited jenkis file

--- a/DEV/liquibase.properties
+++ b/DEV/liquibase.properties
@@ -1,6 +1,6 @@
 #This file is for CLI use.
 
-changeLogFile: dbchangelogWithPro.xml
+changeLogFile: ../dbchangelogWithPro.xml
 #for Oracle
 url: jdbc:oracle:thin:@localhost:1521:xe
 username: DEV
