edited jenkis file

--- a/liquibase.properties
+++ b/liquibase.properties
@@ -1,9 +1,9 @@
 #This file is for CLI use.
 
-changeLogFile: dbchangelogWithPro.xml
+changeLogFile: dbchangelog.xml
 #for Oracle
 url: jdbc:oracle:thin:@localhost:1521:xe
-username: QA
+username: REF
 password: password
 classpath: ojdbc7.jar:postgresql-42.2.8.jar
 #classpath: ojdbc7.jar:postgresql-42.2.8.jar
