--- a/PROD/liquibase.properties
+++ b/PROD/liquibase.properties
@@ -1,6 +1,6 @@
 #This file is for CLI use.
 
-changeLogFile: ../dbchangelogWithPro.xml
+changeLogFile: ../dbchangelog.xml
 #for Oracle
 url: jdbc:oracle:thin:@localhost:1521:xe
 username: DEV
