--- a/liquibase.properties
+++ b/liquibase.properties
@@ -1,11 +1,11 @@
 #This file is for CLI use.
 
-changeLogFile: dbchangelog.xml
+changeLogFile: dbchangelogRef.xml
 #for Oracle
 url: jdbc:oracle:thin:@localhost:1521:xe
 username: REF
 password: password
-classpath: /Users/support.liquibase.net/Drivers/ojdbc7.jar:postgresql-42.2.8.jar
+classpath: /Users/support.liquibase.net/Drivers/ojdbc7.jar
 #classpath: ojdbc7.jar:postgresql-42.2.8.jar
 
 #referenceUrl: jdbc:oracle:thin:@localhost:1521:xe
