--- a/liquibase.properties
+++ b/liquibase.properties
@@ -5,7 +5,7 @@ changeLogFile: dbchangelogRef.xml
 url: jdbc:oracle:thin:@localhost:1521:xe
 username: REF
 password: password
-classpath: /Users/support.liquibase.net/Drivers/ojdbc7.jar
+classpath: ../../Drivers/ojdbc7.jar
 #classpath: ojdbc7.jar:postgresql-42.2.8.jar
 
 #referenceUrl: jdbc:oracle:thin:@localhost:1521:xe
