--- a/liquibase.properties
+++ b/liquibase.properties
@@ -22,6 +22,8 @@ liquibaseProLicenseKey: ABwwGgQUg+31Oh8P7FAp/NfxI2ARWlqW2ysCAgQAwPMUy2WPxpltPRsM
 
 
 
+git pull && git add . && git commit -m "$1" && git push
+
 
 referenceUrl: jdbc:postgresql://localhost:5432/MYDATABASE2
 referenceUsername: postgres
