--- a/DEV/liquibase.properties
+++ b/DEV/liquibase.properties
@@ -2,8 +2,8 @@
 
 changeLogFile: ../dbchangelogWithPro.xml
 #for Oracle
-url: jdbc:oracle:thin:@localhost:1521:xe
-username: DEV
+url: jdbc:oracle:thin:@support.datical.net:1521:ORCL
+username: JENKINS_DEV
 password: password
 classpath: ../../../Drivers/ojdbc7.jar
 #classpath: ojdbc7.jar:postgresql-42.2.8.jar
