--- a/DEV/liquibase.properties
+++ b/DEV/liquibase.properties
@@ -2,9 +2,9 @@
 
 changeLogFile: ../dbchangelogWithPro.xml
 #for Oracle
-url: jdbc:oracle:thin:@support.datical.net:1521:ORCL
+#url: jdbc:oracle:thin:@support.datical.net:1521:ORCL
 username: JENKINS_DEV
-password: password
+#password: password
 classpath: ../../../Drivers/ojdbc8.jar
 
 referenceUrl: jdbc:oracle:thin:@support.datical.net:1521:ORCL
