--- a/QA/liquibase.properties
+++ b/QA/liquibase.properties
@@ -1,6 +1,6 @@
 #This file is for CLI use.
 
-changeLogFile: ../dbchangelogWithPro.xml
+changeLogFile: ../changelog.oracle.sql
 #for Oracle
 
 username: JENKINS_QA
